<resources>
  
    //add meal
    <string name="add_100cal_g_1">add 100cal g-1</string>
    <string name="add_gram">" !add gram"</string>
    <string name="_050">050</string>
    <string name="_240">240</string>
    <string name="_025">025</string>
    <string name="_350">350</string>
    <string name="_125">125</string>
    <string name="food_7">food 7</string>
    <string name="food_6">food 6</string>
    <string name="food_5">food 5</string>
    <string name="food_4">food 4</string>
    <string name="_550">550</string>
    <string name="_250">250</string>
    <string name="_300">300</string>
    <string name="save">SAVE</string>
    <string name="_100">100</string>
    <string name="_045">045</string>
    <string name="_165">165</string>
    <string name="_100cal_g_1">100 cal g-1</string>
    <string name="add_food_">+Add food</string>
    <string name="food_3">food 3</string>
    <string name="food_2">food 2</string>
    <string name="food_1">food 1</string>
    <string name="gram_">GRAM</string>
    <string name="meals">MEALS</string>
    <string name="add_meal">+ADD MEAL</string>
    <string name="yyy" />
    <string name="food_7_">food 7</string>
    <string name="your_meal">YOUR MEAL</string>
    <string name="meal_">MEAL</string>
    <string name="gram___">GRAM</string>
    <string name="_100_cal_g_1___">100 CAL G-1</string>
    <string name="food_1_">food 1</string>
    <string name="food_2_">food 2</string>
    <string name="food_5_">food 5</string>
    <string name="food_6_">food 6</string>
    <string name="_300_">300</string>
    <string name="_250_">250</string>
    <string name="_550_">550</string>
    <string name="_125_">125</string>
    <string name="_350_">350</string>
    <string name="_025_">025</string>
    <string name="_100_">100</string>
    <string name="_165_">165</string>
    <string name="_045_">045</string>
    <string name="_450_">450</string>
    <string name="_240_">240</string>
    <string name="_050_">050</string>
    <string name="_084_">084</string>
    <string name="food_7___">food 7</string>
    <string name="_100_____">100</string>
    <string name="total_calories____">TOTAL CALORIES</string>
    <string name="your_meal_is_saved">Your meal is saved</string>

    //signup
    <string name="full_name">Full Name</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="e_mail">E-mail</string>
    <string name="enter_your_e_mail">Enter your e-mail</string>
    <string name="user_name">User name</string>
    <string name="Enter_your_username">Enter your username</string>
    <string name="Password">Password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="weight_kg">Weight(kg)</string>
    <string name="enter_your_weight">Enter your weight</string>
    <string name="height_cm">Height(cm)</string>
    <string name="enter_your_height">Enter your height</string>

    //login
    <string name="username">Username</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>

    //home
    <string name="calories">Calories</string>
    <string name="xxxxxx">XXXXXX</string>
    <string name="gained1">You have gained</string>
    <string name="gained2">for today</string>
    <string name="bmiHome">Your BMI : XXX</string>
    <string name="caloriesExpect">Expecting Calories : XXX</string>

    //view profile
    <string name="name">Name</string>
    <string name="nameDp">David Hussy</string>
    <string name="user_nameView">User Name</string>
    <string name="emailDp">Davidhussy@gmail.com</string>
    <string name="user_nameDp">David123</string>
    <string name="my_profile">My Profile</string>
    <string name="emailView">Email</string>
    <string name="age">Age</string>
    <string name="ageView">35</string>
    <string name="heightView">182</string>
    <string name="weightView">82</string>
    <string name="bmiView">24.8</string>
    <string name="statusView">Healthy</string>
    <string name="weight">Weight</string>
    <string name="bmi">BMI</string>
    <string name="status">Status</string>

    //edit profile


    //statistic
    <string name="ststs">Statistics</string>
  
</resources>
